--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,11 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "make"
+            "command": "make",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         },
         {
             "label": "build and run",
